apply plugin: 'com.android.application'

apply plugin: 'kotlin-android'

apply plugin: 'kotlin-android-extensions'

apply plugin: 'android-aspectjx'

//apply plugin: 'android-aspectjx'

aspectjx {

    exclude 'com.alipay'

}
android {

    signingConfigs {
        tianfuzhilian {
            keyAlias 'tianfuzhilian'
            keyPassword 'tianfuzhilian'
            storeFile file('../tianfuzhilian_keystore.jks')
            storePassword 'tianfuzhilian'
        }

        ih_key {
            keyAlias 'key0'
            keyPassword '111111'
            storeFile file('../ih_key')
            storePassword '111111'
        }
    }
    compileSdkVersion 26
    defaultConfig {
        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
        applicationId "com.keydom.mianren.ih_doctor"
        minSdkVersion rootProject.ext.android["minSdkVersion"]
        targetSdkVersion rootProject.ext.android["targetSdkVersion"]
        versionCode rootProject.ext.android["versionCode"]
        versionName rootProject.ext.android["versionName"]
        multiDexEnabled true
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

        ndk {
            //选择要添加的对应 cpu 类型的 .so 库。
            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
        }

        manifestPlaceholders = [
                JPUSH_PKGNAME: applicationId,
                JPUSH_APPKEY : "7b8e5825ae9cdd462be80d39", //JPush 上注册的包名对应的 Appkey.
                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
        ]
    }
    buildTypes {
        release {
            minifyEnabled false
            signingConfig signingConfigs.tianfuzhilian
            debuggable true
        }

        debug {
            minifyEnabled false
            signingConfig signingConfigs.tianfuzhilian
        }

    }
    compileOptions {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
    implementation 'com.hyman:flowlayout-lib:1.1.2'
    implementation project(':ih_common')
    implementation files('libs/clientutil.jar')
    implementation files('libs/coreComponent2.2.5.jar')
    implementation files('libs/gson-2.2.2.jar')
    implementation files('libs/msspprovider_signed.jar')
//    api rootProject.ext.dependencies["Aspectj"]
    implementation 'org.aspectj:aspectjrt:1.8.9'
    implementation files('libs/Msc.jar')

    //注解
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
}

repositories {
    mavenCentral()
}
